# calenda-rs

./: .gitignore  Cargo.toml  README.md  analysis.ipynb  features.md  new_analysis.ipynb  rustfmt.toml  stats.json  temperature_function_comparison.ipynb
crates/calendars_core/: Cargo.toml
crates/calendars_core/src/: class_filter.rs  classroom_assignment.rs  heuristics.rs  lib.rs  simulation.rs  simulation_options.rs  stats_tracker.rs  week_calendar.rs
crates/calendars_core/src/optimization/: class_calendar.rs  heuristics.rs  mod.rs  optimization_constraints.rs  stats_tracker.rs
crates/calendars_core/src/optimization/methods/: simulated_annealing.rs
crates/calendars_core/src/school_schedule/: class_calendar.rs  metadata_types.rs  mod.rs  simulation_types.rs
crates/calendars_egui/: Cargo.toml
crates/calendars_egui/src/: app.rs  class_editor.rs  color_list.rs  database_importer.rs  main.rs  optimization_widget.rs  professor_editor.rs  professor_schedule_widget.rs  simple_schedule_widget.rs
src/: app.rs  calendar_widget.rs  calendars.rs  class_editor.rs  class_filter.rs  color_list.rs  database_importer.rs  evaluators.rs  heuristics.rs  main.rs  metadata_register.rs  optimization_widget.rs  perturbators.rs  professor_editor.rs  professor_schedule_widget.rs  real_counter.rs  register.rs  school_schedule.rs  simple_calendar_widget.rs  simple_schedule_widget.rs  simulation.rs  simulation_options.rs  stats_tracker.rs  thread_simulation.rs  timeslot.rs  timeslots.rs  week_calendar.rs
src/school_schedule/: class_calendar.rs  metadata_types.rs  mod.rs  simulation_types.rs
