[package]
name = "calenda-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.3", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
rand = "0.8.5"
itertools = "0.10.3"
egui_extras = "0.21.0"
enum-iterator = "1.4.0"
anyhow = "1.0"
sqlite = "0.30.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.48"
serde_json = "1.0.105"
