[package]

name = "calendars_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
enum-iterator = "2.0.0"
icalendar = "0.16.0"
indicatif = "0.17.8"
itertools = "0.12.1"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version="1.0.197", features = ["derive"] }
serde_json = "1.0.115"
slotmap = { version="1.0.7", features = ["serde"] }
thiserror = "1.0.58"
