[package]

name = "calendars_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
chrono-tz = "0.9.0"
enumflags2 = { version="0.7.9", features = ["serde"] }
hopcroft-karp = "0.2.1"
icalendar = "0.16.0"
indicatif = "0.17.8"
itertools = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version="1.0.197", features = ["derive"] }
serde_json = "1.0.115"
slotmap = { version="1.0.7", features = ["serde"] }
strum = { version="0.26.2", features = ["derive"] }
thiserror = "1.0.58"
