[package]
name = "calendars_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendars_core = { path="../calendars_core" }
egui = "0.26.2"
eframe = { version = "0.26.2", features = ["persistence"] }
egui_extras = "0.26.2"
ecolor = "0.26.2"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
rand = "0.8.5"
itertools = "0.11.0"
enum-iterator = "2.0.0"
anyhow = "1.0"
sqlite = "0.31.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
thiserror = "1.0.48"
serde_json = "1.0.105"
itertools-num = "0.1.3"
num = "0.4.1"
indicatif = "0.17.7"
csscolorparser = "0.6.2"
rand_chacha = "0.3.1"
uuid = {version="1.6.1", features = ["v4"]}
chrono = "0.4.31"
chrono-tz = "0.8.5"
rfd = "0.13.0"
icalendar = {version="0.16.0", features = ["chrono-tz"]}
tempfile = "3.9.0"
serde-pickle = "1.1.1"
