[package]
name = "calendars_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendars_core = { path="../calendars_core" }
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
egui_extras = "0.27.2"
ecolor = "0.27.2"
serde = { version = "1.0.197", features = ["derive"] } # You only need this if you want app persistence
rand = "0.8.5"
itertools = "0.12.1"
enum-iterator = "2.0.0"
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.58"
serde_json = "1.0.115"
itertools-num = "0.1.3"
num = "0.4.1"
indicatif = "0.17.8"
csscolorparser = "0.6.2"
rand_chacha = "0.3.1"
uuid = {version="1.8.0", features = ["v4"]}
chrono = "0.4.37"
chrono-tz = "0.9.0"
rfd = "0.14.1"
icalendar = {version="0.16.0", features = ["chrono-tz"]}
tempfile = "3.10.1"
serde-pickle = "1.1.1"
rusqlite = {version="0.31.0", features = ["bundled"]}
pretty_assertions = "1.4.0"
